# whatami

./: README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: test.yml
doc/: conf.py
whatami/: __init__.py  misc.py  parsers.py  plugins.py  registry.py  what.py  whatutils.py
whatami/minijoblib/: _compat.py
whatami/tests/: fixtures.py  test_misc.py  test_parsers.py  test_plugins.py  test_registry.py  test_roundtrips.py  test_what.py  test_whatutils.py
whatami/wrappers/: what_sklearn.py
whatami/wrappers/tests/: test_what_sklearn.py
